--- a/styles/blog.css
+++ b/styles/blog.css
@@ -221,7 +221,6 @@ main{
     background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
     gap: 13px;
     margin-top: 170px;
-    background: #FFF;
     
 }
 .game-section-container{
@@ -328,4 +327,37 @@ justify-content: center;
 }
 .address{
     margin-top: 28px;
+}
+
+
+.watch-item{
+    position: relative;
+    overflow: hidden;
+}
+.watch-now{
+    position: absolute; 
+    top: 40%;
+    left: 50%; 
+    opacity: 0; 
+    transition: opacity 0.3s ease;  
+}
+.watch-now i{
+    font-size: 35px;
+    color: white;  
+}
+.watch-now span{
+    background: var(--linear, linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%));
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size: 20px; 
+    font-weight: 600;
+    margin-right: 20px;
+
+}
+.watch-item:hover img{
+    filter: brightness(70%);
+}
+.watch-item:hover .watch-now{
+    opacity: 1;
 }
