--- a/styles/blog.css
+++ b/styles/blog.css
@@ -329,7 +329,7 @@ justify-content: center;
     margin-top: 28px;
 }
 
-
+/* watch now icon css starts here */
 .watch-item{
     position: relative;
     overflow: hidden;
@@ -353,7 +353,6 @@ justify-content: center;
     font-size: 20px; 
     font-weight: 600;
     margin-right: 20px;
-
 }
 .watch-item:hover img{
     filter: brightness(70%);
@@ -361,3 +360,4 @@ justify-content: center;
 .watch-item:hover .watch-now{
     opacity: 1;
 }
+/* watch now icon css ends here */
